# maap-pgstac

./: .env  .gitignore  README.md  deploy.sh  package-lock.json  package.json  titiler_buckets.yaml  userdata.yaml
.github/workflows/: deploy.yml  tests.yml
cdk/: PgBouncer.ts  PgStacInfra.ts  StacBrowser.ts  Vpc.ts  app.ts  config.ts
cdk/dockerfiles/: Dockerfile.raster
cdk/handlers/: raster_handler.py
cdk/runtimes/eoapi/raster/: pyproject.toml
cdk/runtimes/eoapi/raster/eoapi/raster/: factory.py  main.py  models.py  settings.py
cdk/runtimes/titiler-pgstac-api/: Dockerfile  requirements.txt
cdk/runtimes/titiler-pgstac-api/src/: factory.py  handler.py  models.py  settings.py
cdk/scripts/: pgbouncer-setup.sh
tests/: ingestion.py  test_stac_ingestion.py
